[package]
name = "smart_contarct"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.6.22"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
zeroize = "=1.3.0"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
metaplex-token-metadata = {  version = "0.0.1", features = ["no-entrypoint"] }
borsh = "0.9.1"
hex = "0.4.3"

[dev-dependencies]
solana-sdk = "1.6.22"
solana-program-test = "1.6.22"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"]
